git: Added project specific items to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,8 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+# Project specific
+config/name_id_map.json
+notebooks/group_selection.ipynb
+data
